--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -57,62 +57,88 @@
 
     </com.wunderlist.slidinglayer.SlidingLayer>
 
-
-
     <com.wunderlist.slidinglayer.SlidingLayer
         xmlns:slidingLayer="http://schemas.android.com/apk/res-auto"
         android:id="@+id/show_problem_sliding_layer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        slidingLayer:stickTo="bottom">
+        slidingLayer:stickTo="bottom"
+        slidingLayer:shadowDrawable="@drawable/sidebar_shadow"
+        slidingLayer:shadowSize="@dimen/shadow_size">
 
-        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/details_scrollview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:measureAllChildren="true">
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical" android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <RelativeLayout
+                <LinearLayout
+                    android:id="@+id/show_head"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:id="@+id/show_head"
-                    android:background="#EEEEEE">
+                    android:background="#FFFFFF"
+                    android:orientation="horizontal"
+                    android:weightSum="4">
 
-                    <TextView
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:id="@+id/show_title"
-                        android:textSize="24dp"
-                        android:paddingBottom="16dp"
-                        android:layout_alignParentTop="false"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="1dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_weight="3"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/show_type"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="18dp" />
+
+                        <TextView
+                            android:id="@+id/show_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:lines="1"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textSize="24dp" />
+
+                    </LinearLayout>
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/show_type"
-                        android:src="@drawable/type_1"
-                        android:layout_alignTop="@+id/show_title"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
+                        android:id="@+id/show_type_image"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text=""
-                        android:id="@+id/show_by_time"
-                        android:textSize="12dp"
-                        android:layout_below="@+id/show_title"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
-                </RelativeLayout>
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF">
+
+                    <View
+                        android:id="@+id/separator1"
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="#90909090" />
+
+                </LinearLayout>
+
+                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/details_scrollview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fillViewport="true"
+                    android:measureAllChildren="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -122,7 +148,7 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="16dp"
                     android:orientation="vertical"
-                    android:background="#F5F5F5">
+                    android:background="#FFFFFF">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -176,7 +202,7 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@color/textRed"
-                            android:text="unsolved"
+                            android:text="@string/string_unsolved"
                             android:id="@+id/show_status"
 
                             android:layout_alignParentTop="true"
@@ -187,59 +213,56 @@
                         android:id="@+id/textView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Description:"
+                        android:text="@string/string_description"
                         android:layout_marginTop="32dp" />
 
                     <TextView
                         android:id="@+id/show_content"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:text="Міське озеро забруднюється сміттям, що призводить до його пересихання, хоча воно є місцем існування багатьох водоплаваючих птахів" />
+                        android:layout_marginTop="6dp"/>
 
                     <TextView
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
-                        android:text="Suggested solution:" />
+                        android:text="@string/string_suggested_solution" />
 
                     <TextView
                         android:id="@+id/show_proposal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
-                        android:text="Очищення озера від сміття, просвітницька робота серед населення" />
+                        android:layout_marginTop="6dp" />
 
-                    <LinearLayout
-                        android:orientation="horizontal"
+                    <org.ecomap.android.app.ui.components.ExpandableHeightGridView
+                        android:id="@+id/gridview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp">
+                        android:layout_marginTop="25dp"
+                        android:columnWidth="100dp"
+                        android:gravity="center"
+                        android:horizontalSpacing="10dp"
+                        android:numColumns="auto_fit"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="10dp">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView3"
-                            android:src="@drawable/logo" />
+                    </org.ecomap.android.app.ui.components.ExpandableHeightGridView>
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView4"
-                            android:src="@drawable/logo" />
+                    <FrameLayout
+                        android:id="@+id/fragment_comments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:layout="@layout/fragment_comments">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView5"
-                            android:src="@drawable/logo" />
-                    </LinearLayout>
+                    </FrameLayout>
 
                 </LinearLayout>
 
+                </ScrollView>
+
             </LinearLayout>
-        </ScrollView>
+
 
     </com.wunderlist.slidinglayer.SlidingLayer>
 
