--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="First name"
+                android:text="@string/first_name"
                 android:id="@+id/textView8"
                 android:layout_marginLeft="24dp"
                 android:textColor="@color/profile_gray"
@@ -82,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Stanislav"
+                        android:text=""
                         android:id="@+id/profile_firstname"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/imageView2"
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Last name"
+                android:text="@string/last_name"
                 android:id="@+id/textView20"
                 android:layout_marginLeft="24dp"
                 android:textColor="@color/profile_gray" />
@@ -122,7 +122,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Timchenko"
+                        android:text=""
                         android:id="@+id/profile_lastname"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/imageView6"
@@ -138,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Role"
+                android:text="@string/role"
                 android:id="@+id/textView21"
                 android:layout_marginLeft="24dp"
                 android:textColor="@color/profile_gray" />
@@ -162,7 +162,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="User"
+                        android:text="@string/user"
                         android:id="@+id/profile_role"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/imageView7"
@@ -178,7 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Email"
+                android:text="@string/email"
                 android:id="@+id/textView22"
                 android:layout_marginLeft="24dp"
                 android:textColor="@color/profile_gray" />
@@ -202,7 +202,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="st.timchenko@gmail.com"
+                        android:text=""
                         android:id="@+id/profile_email"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/imageView8"
@@ -217,7 +217,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Logout"
+                android:text="@string/logout"
                 android:id="@+id/profile_logout"
                 android:layout_gravity="center"
                 android:background="#FFFFFF"
@@ -227,7 +227,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Forgot your password? Change it!"
+                android:text="@string/change_password"
                 android:id="@+id/profile_change_password"
                 android:layout_gravity="center_horizontal"
                 android:clickable="true"
