--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Problem title:"
+            android:text="@string/add_problem_title"
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Problem type:"
+            android:text="@string/add_problem_type"
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Description:"
+            android:text="@string/string_description"
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Suggested solution"
+            android:text="@string/string_suggested_solution"
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
@@ -100,7 +100,7 @@
                 android:id="@+id/add_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add"
+                android:text="@string/add_problem_add_button"
                 android:textColor="#000000"
                 />
 
@@ -108,7 +108,7 @@
                 android:id="@+id/cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:textColor="#000000"
                 android:layout_gravity="center_horizontal"
                 />
