--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,8 @@
     <color name="snackBarSuccess">@color/primary</color>
     <color name="snackBarWarning">@color/accent</color>
 
+    <color name="slidinglayer_background">#ffffff</color>
+
     <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/accent</item>
