--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         slidingLayer:stickTo="bottom"
         slidingLayer:shadowDrawable="@drawable/sidebar_shadow"
+        slidingLayer:previewOffsetDistance="100dp"
         slidingLayer:shadowSize="@dimen/shadow_size">
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
