--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -143,7 +143,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="24dp"
                             android:id="@+id/show_like"
-                            android:src="@drawable/heart_icon"
+                            android:src="@drawable/heart_empty"
                             android:layout_alignParentTop="true"
                             android:layout_toLeftOf="@+id/show_numOfLikes"
                             android:layout_toStartOf="@+id/show_numOfLikes"
@@ -165,6 +165,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_description"
+                        android:textStyle="bold"
                         android:layout_marginTop="32dp" />
 
                     <TextView
@@ -178,10 +179,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
+                        android:textStyle="bold"
                         android:text="@string/string_suggested_solution" />
 
                     <TextView
                         android:id="@+id/show_proposal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="32dp"
+                        android:textStyle="bold"
+                        android:text="@string/string_added_by" />
+
+                    <TextView
+                        android:id="@+id/show_date_added"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="6dp" />
