--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -25,10 +25,20 @@
             android:text="Problem Title:"
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
-        <EditText
-            android:id="@+id/problemTitle"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_problemTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/problemTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:singleLine="true"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <TextView
             android:id="@+id/textView3"
@@ -53,12 +63,21 @@
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
-        <EditText
-            android:id="@+id/problemDescription"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_problemDescription"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textMultiLine" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/problemDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:imeOptions="actionNext"
+                android:singleLine="true"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <TextView
             android:id="@+id/textView4"
@@ -69,12 +88,21 @@
             android:paddingBottom="5dp"
             android:textColor="@color/blue2" />
 
-        <EditText
-            android:id="@+id/problemSolution"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_problemSolution"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textMultiLine" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/problemSolution"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:imeOptions="actionDone"
+                android:singleLine="true"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <org.ecomap.android.app.ui.components.NonScrollableListView
             android:id="@+id/nonScrollableListView"
