--- a/app/src/main/res/layout-land/filters_fragment_main.xml
+++ b/app/src/main/res/layout-land/filters_fragment_main.xml
@@ -1,17 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/scroll_view"
     >
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+            <LinearLayout
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:id="@+id/line1">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:id="@+id/textView5"
+                    android:text="@string/starting_date"
+                    android:textColor="@color/secondary_text"
+                    android:layout_margin="6dp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:text="New Text"
+                    android:id="@+id/start_date"
+                    android:textColor="@color/primary_text"
+                    android:layout_margin="6dp"
+                    android:gravity="center"
+                    android:clickable="true"/>
+                </LinearLayout>
+            <LinearLayout
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:text="@string/end_date"
+                    android:id="@+id/textView9"
+                    android:textColor="@color/secondary_text"
+                    android:layout_margin="6dp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:text="New Text"
+                    android:textColor="@color/primary_text"
+                    android:layout_margin="6dp"
+                    android:gravity="center"
+                    android:clickable="true"/>
+
+            </LinearLayout>
+
+
 
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="300dp"
         android:layout_alignParentTop="true">
     </ListView>
+
     <LinearLayout
 
         android:orientation="horizontal"
@@ -33,5 +96,6 @@
 
         </Button>
     </LinearLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
