--- a/app/src/main/res/layout/fragment_top10_tab.xml
+++ b/app/src/main/res/layout/fragment_top10_tab.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:background="@color/ColorPrimaryTab"/>
+        android:background="@color/snackBarSuccess"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
