--- a/app/src/main/res/layout/my_list_view1.xml
+++ b/app/src/main/res/layout/my_list_view1.xml
@@ -4,9 +4,9 @@
     android:id="@+id/textView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
+    android:gravity="top|left"
     android:padding="10dp"
     android:text="TextView"
-    android:textColor="#ff134600"
+    android:textColor="#ff050e00"
     android:textSize="20dp">
 </TextView>
