--- a/app/src/main/res/layout/filters_fragment_main.xml
+++ b/app/src/main/res/layout/filters_fragment_main.xml
@@ -6,6 +6,21 @@
     android:orientation="vertical"
     android:id="@+id/scroll_view"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
 
         <LinearLayout
 
@@ -65,14 +80,28 @@
                 android:clickable="true"/>
 
         </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="350dp">
     </ListView>
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
+
 
 
 
@@ -95,5 +124,6 @@
             android:id="@+id/ok">
 
         </Button>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
