--- a/app/src/main/res/layout-land/filters_fragment_main.xml
+++ b/app/src/main/res/layout-land/filters_fragment_main.xml
@@ -8,6 +8,14 @@
         android:orientation="vertical"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
             <LinearLayout
 
@@ -65,15 +73,26 @@
                     android:clickable="true"/>
 
             </LinearLayout>
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
-
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_alignParentTop="true">
     </ListView>
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
     <LinearLayout
 
